--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,9 @@ export(DNA_gaps_corr)
 export(dna2aa)
 exportClasses(BiologySeq)
 exportClasses(BiologySeqSet)
+exportMethods("DNA<-")
+exportMethods(AA)
+exportMethods(AAsite_by_DNA)
+exportMethods(DNA)
+exportMethods(DNAsite_by_AA)
 importFrom(magrittr,"%>%")
