--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,20 @@
 
 export("%>%")
 export(BiologySeq)
+export(BiologySeqMSA)
 export(BiologySeqSet)
 export(DNA_gaps_corr)
 export(dna2aa)
 exportClasses(BiologySeq)
+exportClasses(BiologySeqMSA)
 exportClasses(BiologySeqSet)
 exportMethods("DNA<-")
 exportMethods(AA)
 exportMethods(AAsite_by_DNA)
 exportMethods(DNA)
 exportMethods(DNAsite_by_AA)
+exportMethods(consAA)
+exportMethods(consAAfreq)
+exportMethods(consDNA)
+exportMethods(consDNAfreq)
 importFrom(magrittr,"%>%")
