feat: use ClustalOmega as default

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ exportMethods(AA)
 exportMethods(AAsite_by_DNA)
 exportMethods(DNA)
 exportMethods(DNAsite_by_AA)
+exportMethods(aln_params)
 exportMethods(consAA)
 exportMethods(consAAfreq)
 exportMethods(consDNA)
