--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(BiologySeq)
 export(BiologySeqMSA)
 export(BiologySeqSet)
 export(DNA_gaps_corr)
+export(call_mut)
 export(dna2aa)
 exportClasses(BiologySeq)
 exportClasses(BiologySeqMSA)
