feat: add BiologyAAmutSet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%>%")
 export(BiologyAAmut)
+export(BiologyAAmutSet)
 export(BiologySeq)
 export(BiologySeqMSA)
 export(BiologySeqSet)
@@ -9,10 +10,13 @@ export(DNA_gaps_corr)
 export(call_mut)
 export(dna2aa)
 exportClasses(BiologyAAmut)
+exportClasses(BiologyAAmutSet)
 exportClasses(BiologySeq)
 exportClasses(BiologySeqMSA)
 exportClasses(BiologySeqSet)
 exportMethods("DNA<-")
+exportMethods("[")
+exportMethods("[[")
 exportMethods(AA)
 exportMethods(AAsite_by_DNA)
 exportMethods(DNA)
@@ -22,6 +26,7 @@ exportMethods(consAA)
 exportMethods(consAAfreq)
 exportMethods(consDNA)
 exportMethods(consDNAfreq)
+exportMethods(select_mut)
 exportMethods(show)
 exportMethods(sort)
 exportMethods(unique)
