--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: biomuts
 Title: What the Package Does (One Line, Title Case)
-Version: 0.0.6
+Version: 0.0.7
 Authors@R: 
     person("William", "Song", , "william_swl@163.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
@@ -21,7 +21,8 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Collate: 
-    'BiologyAAMut-class.R'
+    'BiologyAAmut-class.R'
+    'BiologyAAmutSet-class.R'
     'BiologySeq-class.R'
     'BiologySeqSet-class.R'
     'BiologySeqMSA-class.R'
