--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(BiologySeqMSA)
 export(BiologySeqSet)
 export(DNA_gaps_corr)
 export(call_mut)
+export(count_muts)
 export(dna2aa)
 exportClasses(BiologyAAmut)
 exportClasses(BiologyAAmutSet)
