feat: [, [[ and length method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ exportMethods(consAA)
 exportMethods(consAAfreq)
 exportMethods(consDNA)
 exportMethods(consDNAfreq)
+exportMethods(consSeq)
 exportMethods(select_mut)
 exportMethods(show)
 exportMethods(sort)
