feat: add call_AAmutSet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(BiologySeq)
 export(BiologySeqMSA)
 export(BiologySeqSet)
 export(DNA_gaps_corr)
+export(call_AAmutSet)
 export(call_mut)
 export(count_muts)
 export(dna2aa)
