feat: add call_AAmut, call_AAmutSet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(BiologySeq)
 export(BiologySeqMSA)
 export(BiologySeqSet)
 export(DNA_gaps_corr)
+export(call_AAmut)
 export(call_mut)
 export(count_muts)
 export(dna2aa)
