feat: add aa_feature data, add aa_info, compare_aa

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,10 @@ export(BiologySeq)
 export(BiologySeqMSA)
 export(BiologySeqSet)
 export(DNA_gaps_corr)
+export(aa_info)
 export(call_AAmut)
 export(call_mut)
+export(compare_aa)
 export(count_muts)
 export(dna2aa)
 exportClasses(BiologyAAMSA)
