--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: biomuts
 Title: What the Package Does (One Line, Title Case)
-Version: 0.0.12
+Version: 0.0.13
 Authors@R: 
     person("William", "Song", , "william_swl@163.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
@@ -28,4 +28,8 @@ Collate:
     'BiologyAAMSA-class.R'
     'BiologyAAmut-class.R'
     'BiologyAAmutSet-class.R'
+    'data.R'
     'utils-pipe.R'
+Depends: 
+    R (>= 2.10)
+LazyData: true
