feat: add mutset_compare(compare two mut sets), add numbering label for BiologySeqMSA

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,16 +14,20 @@ export(call_mut)
 export(compare_aa)
 export(count_muts)
 export(dna2aa)
+export(mutset_compare)
 exportClasses(BiologyAAMSA)
 exportClasses(BiologyAAmut)
 exportClasses(BiologyAAmutSet)
 exportClasses(BiologySeq)
 exportClasses(BiologySeqMSA)
 exportClasses(BiologySeqSet)
+exportMethods("AAnumbering<-")
 exportMethods("DNA<-")
 exportMethods("[")
 exportMethods("[[")
+exportMethods("numbering<-")
 exportMethods(AA)
+exportMethods(AAnumbering)
 exportMethods(AAsite_by_DNA)
 exportMethods(DNA)
 exportMethods(DNAsite_by_AA)
@@ -35,8 +39,12 @@ exportMethods(consDNA)
 exportMethods(consDNAfreq)
 exportMethods(consSeq)
 exportMethods(length)
+exportMethods(numberMuts)
+exportMethods(numbering)
 exportMethods(select_mut)
 exportMethods(show)
 exportMethods(sort)
 exportMethods(unique)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
+importFrom(rlang,.env)
