--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: biomuts
 Title: What the Package Does (One Line, Title Case)
-Version: 0.0.13
+Version: 0.0.14
 Authors@R: 
     person("William", "Song", , "william_swl@163.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
@@ -15,6 +15,7 @@ Imports:
     magrittr,
     msa,
     purrr,
+    rlang,
     XVector
 Suggests: 
     covr,
@@ -28,7 +29,9 @@ Collate:
     'BiologyAAMSA-class.R'
     'BiologyAAmut-class.R'
     'BiologyAAmutSet-class.R'
+    'biomuts-package.R'
     'data.R'
+    'mutset_compare.R'
     'utils-pipe.R'
 Depends: 
     R (>= 2.10)
