feat: add number_mut

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(compare_aa)
 export(count_muts)
 export(dna2aa)
 export(mutset_compare)
+export(number_mut)
 exportClasses(BiologyAAMSA)
 exportClasses(BiologyAAmut)
 exportClasses(BiologyAAmutSet)
@@ -39,7 +40,7 @@ exportMethods(consDNA)
 exportMethods(consDNAfreq)
 exportMethods(consSeq)
 exportMethods(length)
-exportMethods(numberMuts)
+exportMethods(number_muts)
 exportMethods(numbering)
 exportMethods(select_mut)
 exportMethods(show)
